--- a/Round3/file1.Rmd
+++ b/Round3/file1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Basic setup. Large Sample"
+title: "Large Sample"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
@@ -17,7 +17,7 @@ n.replications <-  1e2
 large.sample <- 1e2
 p <- 23*large.sample
 n <- 40*large.sample # total sample size-> n/2 in each group.
-n.permutations <- 1.5e2
+n.permutations <- 1e2
 n.folds <- 2
 
 source('Gilron Effect of Cross Validatino.R')
@@ -35,7 +35,7 @@ direction <- 23 * direction0 / sqrt(n/2*maha)
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
 RhpcBLASctl::blas_set_num_threads(1)
-registerDoMC(cores=100)
+registerDoMC(cores=30)
 ```
 
 ```{r independent noise variable folds}
@@ -63,7 +63,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
-    ts <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+    ts <- statisticsLargeSample(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     
     # Prepare to permute
     old.labels <- labels
@@ -80,7 +80,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
       
-      permuted[i,] <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+      permuted[i,] <- statisticsLargeSample(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     } # End permutation
     
     # Compute p-vals for each statistic
