--- a/docs/file13.Rmd
+++ b/docs/file13.Rmd
@@ -3,11 +3,14 @@ title: "Bootstrapped effect"
 author: "Jonathan Rosenblatt"
 date: "Aug 8, 2016"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 
 ```{r preliminaries}
 file.name <- "file13"
+setwd('~/workspace/permuting_accuracy/Round3/')
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
 n.replications <- 1e3
@@ -23,8 +26,12 @@ source('Gilron Effect of Cross Validatino.R')
 ## Signal in location
 effects <- seq(0, 0.5, length=3) # change in location
 
-## Signal in scale
+## Covariance
 Sigma <- diag(p)
+# lattice::levelplot(Sigma)
+direction0 <- rep(1,p)
+maha <- direction0 %*% solve(Sigma) %*% direction0 %>% c
+direction <- 23 * direction0 / sqrt(n/2*maha)
 ```
 
 
@@ -45,8 +52,9 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
 
   # Shift alternative:
   # effect <- effects[[3]]
-  noise <- .noise + effect * labels
-
+  noise <- .noise
+  shift <- matrix(effect * direction, nrow=n/2, ncol=p, byrow = TRUE)
+  noise[labels,] <- noise[labels,] + shift
 
   # Asign observations to folds. Use the simple label structure to balance folds.
   fold.ids <- balanced_folding(labels, n.folds, balance = balance)
@@ -56,37 +64,13 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
   x1 <- noise[labels,]
   x2 <- noise[!labels,]
   
-  ts <- list(
-    Oracle=t_Oracle(x1, x2, Sigma, Sigma),
-    Hotelling=t_Hotelling(x1, x2, FALSE),
-    Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-    Goeman=t_goeman(x1, x2),
-    sd=t_SD(x1, x2),
-    lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-    lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
-    lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-    lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
-    svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
-    svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-    # svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-    # svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
-    svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-    svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-    # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-    # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2),
-    svm.Boot.1=t_svm_boot(noise, labels, B=10, type2=2, cost=cost.1, type=1),
-    svm.Boot.2=t_svm_boot(noise, labels, B=10, type2=2, cost=cost.2, type=1),
-    svm.Boot.3=t_svm_boot(noise, labels, B=50, type2=2, cost=cost.1, type=1),
-    svm.Boot.4=t_svm_boot(noise, labels, B=50, type2=2, cost=cost.2,  type=1),
-    lda.Boot.1=t_lda_boot(noise, labels, B=10, type2=2, type=1)
-  )
+  ts <- statisticsBootstrap(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
   
   # Initialize result containers
   permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
   
   old.labels <- labels
   old.folds.ids <- fold.ids
-  statistics.names <- names(ts)
   
   for(i in 1:n.permutations){
     # i <- 1
@@ -99,30 +83,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
     # Checking balance:
     # capture.output(table(.fold.ids, .labels), file=balanc.log, append = TRUE)
     
-    permuted[i,] <- c(
-      Oracle=t_Oracle(x1, x2, Sigma, Sigma),
-      Hotelling=t_Hotelling(x1, x2, FALSE),
-      Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-      Goeman=t_goeman(x1, x2),
-      sd=t_SD(x1, x2),
-      lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
-      lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-      lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
-      svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
-      svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-      # svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-      # svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
-      svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-      svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-      # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-      # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2),
-      svm.Boot.1=t_svm_boot(noise, labels, B=10, type2=2, cost=cost.1, type=1),
-      svm.Boot.2=t_svm_boot(noise, labels, B=10, type2=2, cost=cost.2, type=1),
-      svm.Boot.3=t_svm_boot(noise, labels, B=50, type2=2, cost=cost.1, type=1),
-      svm.Boot.4=t_svm_boot(noise, labels, B=50, type2=2, cost=cost.2,  type=1),
-      lda.Boot.1=t_lda_boot(noise, labels, B=10, type2=2, type=1)
-    )
+    permuted[i,] <- statisticsBootstrap(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+    
   } # End permutation
 
   # Compute p-vals for each statistic
@@ -130,12 +92,10 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
   for(i in seq_along(ts)){
     pvals[i] <- mean(ts[i]<=permuted[,i], na.rm=TRUE)
   }
-  
+  names(pvals) <- names(ts)
   c(effect=effect, pvals) 
 }
 pbPost("note", "Done", the.message)
-
-pbPost(type = "note", body = "Done", the.message)
 save.image(file=paste(file.name,".RData", sep=''))
 ```
 
@@ -144,42 +104,33 @@ save.image(file=paste(file.name,".RData", sep=''))
 # load(file='file13.RData') 
 pvals.1.9 %<>%  as.data.table()
 
-names(pvals.1.9)[-1] <- c("Oracle", "Hotelling", "Hotelling.shrink", "Goeman", "sd", 
-"lda.CV.1", "lda.CV.2", "lda.noCV.1", "lda.noCV.2", "svm.CV.1", 
-"svm.CV.2", "svm.noCV.1", "svm.noCV.2", "svm.Boot.1", "svm.Boot.2", 
-"svm.Boot.3", "svm.Boot.4", "lda.Boot.1")
+# names(pvals.1.9)[-1] <- c("Oracle", "Hotelling", "Hotelling.shrink", "Goeman", "sd", 
+# "lda.CV.1", "lda.CV.2", "lda.noCV.1", "lda.noCV.2", "svm.CV.1", 
+# "svm.CV.2", "svm.noCV.1", "svm.noCV.2", "svm.Boot.1", "svm.Boot.2", 
+# "svm.Boot.3", "svm.Boot.4", "lda.Boot.1")
 
 pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
 pvals.melt[,c("reject","effect.factor"):=list(as.numeric(value <= 0.05), as.factor(effect)),] 
 
 # Reorder levels
-file13.levels <- c("Oracle", "Hotelling", "Hotelling.shrink", "Goeman", "sd", 
-"lda.CV.1", "lda.noCV.1", "svm.CV.1", 
-"svm.CV.2", "svm.noCV.1", "svm.noCV.2", "svm.Boot.1", "svm.Boot.2", 
-"svm.Boot.3", "svm.Boot.4", "lda.Boot.1")
-pvals.melt$statistic <- factor(pvals.melt$statistic, levels=file13.levels)
+# file13.levels <- c("Oracle", "Hotelling", "Hotelling.shrink", "Goeman", "sd", 
+# "lda.CV.1", "lda.noCV.1", "svm.CV.1", 
+# "svm.CV.2", "svm.noCV.1", "svm.noCV.2", "svm.Boot.1", "svm.Boot.2", 
+# "svm.Boot.3", "svm.Boot.4", "lda.Boot.1")
+# pvals.melt$statistic <- factor(pvals.melt$statistic, levels=file13.levels)
 
 # Filter statistics
 pvals.melt <- pvals.melt[!is.na(statistic),,]
 ```
 
+```{r}
+source('prepare_graphics.R')
+plot(plot.3)
+```
 
 ```{r}
-plot.3 <- pvals.melt %>% 
-  ggplot(aes(y=reject, x=statistic, group=effect.factor, shape=effect.factor, color=effect.factor)) +
-  theme_bw(base_size = 20)+
-  theme(legend.position="none")+
-  # ggtitle("Fixed signal, Gaussian Noise")+
-  ylab('Power')+
-  xlab('')+
-  stat_summary(fun.y='mean', geom="point", cex=4) +
-  geom_hline(yintercept=0.05, lty=2)+
-  geom_vline(xintercept=.limits, lty=c(3,2,3))+
-  coord_flip()
-plot.3
-
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
-plot.3
+plot(plot.3)
 dev.off()
 ```
 
