--- a/docs/file33.Rmd
+++ b/docs/file33.Rmd
@@ -4,13 +4,15 @@ author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
 editor_options: 
-  chunk_output_type: inline
+  chunk_output_type: console
 ---
 
 
 
 ```{r preliminaries}
 file.name <- "file33"
+setwd('~/workspace/permuting_accuracy/Round3/')
+
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
 n.replications <-  1e3
@@ -26,10 +28,10 @@ source('Gilron Effect of Cross Validatino.R')
 effects <- seq(0, 0.5, length=3) # change in location
 
 Sigma <- diag(p)
-lattice::levelplot(Sigma)
+# lattice::levelplot(Sigma)
 direction0 <- rep(1,p)
-maha <- mahalanobis(x = direction0, center = 0, cov = Sigma)
-direction <- direction0 * sqrt(p/maha)
+maha <- direction0 %*% solve(Sigma) %*% direction0 %>% c
+direction <- 23 * direction0 / sqrt(n/2*maha)
 ```
 
 
@@ -53,8 +55,9 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     # effect <- effects[[3]]
     
     noise <- .noise
-    noise[labels,] <- noise[labels,] + effect * direction
-  
+    shift <- matrix(effect * direction, nrow=n/2, ncol=p, byrow = TRUE)
+    noise[labels,] <- noise[labels,] + shift
+    
     ## Compute observed statistic
     x1 <- noise[labels,]
     x2 <- noise[!labels,]
@@ -64,31 +67,12 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
-    ts <- list(
-      Oracle=t_Oracle(x1, x2, Sigma, Sigma),
-      Hotelling=t_Hotelling(x1, x2, FALSE),
-      Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-      Goeman=t_goeman(x1, x2),
-      lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
-      lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-      lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
-      sd=t_SD(x1, x2),
-      svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
-      svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-      svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-      svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
-      svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-      svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-      svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-      svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
-    )
-    
+    ts <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     
     # Prepare to permute
     old.labels <- labels
     old.folds.ids <- fold.ids
-
+    
     # Initialize permuted statistics
     permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
     
@@ -100,25 +84,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
       
-      permuted[i,] <- c(
-        Oracle=t_Oracle(x1, x2, Sigma, Sigma),
-        Hotelling=t_Hotelling(x1, x2, FALSE),
-        Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-        Goeman=t_goeman(x1, x2),
-        lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-        lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
-        lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-        lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
-        sd=t_SD(x1, x2),
-        svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
-        svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-        svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-        svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
-        svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-        svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-        svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-        svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
-      )
+      permuted[i,] <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     } # End permutation
     
     # Compute p-vals for each statistic
@@ -130,13 +96,13 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     }
     names(pvals) <- names(ts)
     names(pvals.strickt) <- names(ts)
-
+    
     c(effect=effect, pvals, pvals.strickt) 
   }
 } 
-  
+
 pbPost(type = "note", body = "Done", the.message)
-# save.image(file=paste(file.name,".RData", sep=''))
+save.image(file=paste(file.name,".RData", sep=''))
 ```
 
 
@@ -167,8 +133,8 @@ rejections.melt <- melt(rejections, variable.name='statistic', id.vars = 'effect
 rejections.melt[,c("effect.factor"):=list(as.factor(effect)),] 
 
 # Reorder levels
-rejections.melt$statistic <- factor(rejections.melt$statistic, levels=statistic.levels)
-levels(rejections.melt$statistic)
+# rejections.melt$statistic <- factor(rejections.melt$statistic, levels=statistic.levels)
+# levels(rejections.melt$statistic)
 
 # Filter statistics
 rejections.melt <- rejections.melt[!is.na(statistic),,]
@@ -185,12 +151,12 @@ plot.3 <- rejections.melt %>%
   xlab('')+
   stat_summary(fun.y='mean', geom="point", cex=4) +
   geom_hline(yintercept=0.05, lty=2)+
-  geom_vline(xintercept=.limits, lty=c(3,2,3))+
+  # geom_vline(xintercept=.limits, lty=c(3,2,3))+
   coord_flip()
-plot.3
+plot(plot.3)
 
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
-plot.3
+plot(plot.3)
 dev.off()
 ```
 
